# rippling-connector

./: .gitignore  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agent-memory-local/source-api-researcher/: MEMORY.md  project_rippling_api_doc.md
.claude/agents/: connector-auth-validator.md  connector-dev.md  connector-doc-writer.md  connector-package-builder.md  connector-spec-generator.md  connector-tester.md  connector-write-back-tester.md  source-api-researcher.md  source-write-api-researcher.md
.claude/commands/: create-connector.md
.claude/skills/authenticate-source/: SKILL.md
.claude/skills/build_connector_package/: SKILL.md
.claude/skills/collect-credentials/: SKILL.md
.claude/skills/create-connector-document/: SKILL.md
.claude/skills/generate-connector-spec/: SKILL.md
.claude/skills/migrate-legacy-implementation/: SKILL.md
.claude/skills/research-source-api/: SKILL.md
.claude/skills/research-write-api-of-source/: SKILL.md
.claude/skills/test-and-fix-connector/: SKILL.md
.claude/skills/validate-connector-auth/: SKILL.md
.claude/skills/validate-incremental-sync/: SKILL.md
.claude/skills/write-back-testing/: SKILL.md
sources/rippling/: README.md  pyproject.toml
sources/rippling/src/: _generated_rippling_python_source.py  connector_spec.yaml  rippling.py
src/: connector_spec.yaml
src/databricks/labs/community_connector/: __init__.py
tests/: auth_test.py
tests/configs/: dev_config.json.example
tests/unit/sources/rippling/: test_rippling_lakeflow_connect.py
(+18 files in other folders)
