[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-rippling"
version = "0.1.0"
description = "Rippling connector for Lakeflow Community Connectors"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["databricks", "lakeflow", "rippling", "hr", "connector"]
dependencies = [
    "pyspark>=3.5.0",
    "pydantic>=2.0.0",
    "lakeflow-community-connectors>=0.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.rippling"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.rippling" = "src"

[tool.setuptools.package-data]
"databricks.labs.community_connector.sources.rippling" = ["*.yaml", "*.json", "*.md"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
